# maidsafe_types

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs  index.html
0.2.0/: search-index.js
0.2.0/accumulator/: index.html  struct.Entry.html
0.2.0/aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
0.2.0/crust/: enum.Endpoint.html  enum.Port.html
0.2.0/itertools/: struct.Batching.html  struct.Coalesce.html  struct.Combinations.html  struct.FnMap.html  struct.GroupBy.html  struct.ISlice.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.Linspace.html  struct.Merge.html  struct.MultiPeek.html  struct.PadUsing.html  struct.Product.html  struct.PutBack.html  struct.PutBackN.html  struct.RcIter.html  struct.RepeatCall.html  struct.RepeatN.html  struct.Step.html  struct.Stride.html  struct.StrideMut.html  struct.TakeWhileRef.html  struct.Tee.html  struct.Times.html  struct.Unfold.html  struct.UniqueBy.html  struct.WhileSome.html  struct.Zip.html  struct.ZipLongest.html
0.2.0/maidsafe_types/: enum.CryptoError.html  enum.PayloadTypeTag.html  index.html  sidebar-items.js  struct.MaidTypeTags.html  struct.MpidTypeTags.html  struct.Payload.html  trait.IdTypeTags.html  trait.Random.html  trait.TypeTag.html
0.2.0/rand/: struct.AsciiGenerator.html  (+1 more)
0.2.1/: index.html  search-index.js
0.2.2/: search-index.js
0.2.3/: search-index.js
examples/: NameType.rs
src/: helper.rs  lib.rs  test_utils.rs
src/id/: maid.rs  (+11 more)
(+871 files in other folders)
