[package]
name = "maidsafe_types"
version = "0.1.2"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Types for maidsafe clients and vaults."
documentation = "http://dirvine.github.io/maidsafe_types/"
repository = "https://github.com/dirvine/maidsafe_types"
readme = "README.md"
license = "GPL-3.0"
homepage = "http://www.maidsafe.net"

[dependencies]
rustc-serialize = "*"
cbor = "*"
sodiumoxide = "0.0.4"
rand = "*"
routing="0.1.32"
