[package]
name = "maidsafe_types"
version = "0.2.3"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Types for maidsafe clients and vaults."
documentation = "http://maidsafe.net/maidsafe_types/latest"
repository = "https://github.com/maidsafe/maidsafe_types"
readme = "README.md"
license = "GPL-3.0"
homepage = "http://maidsafe.net"

[dependencies]
rustc-serialize = "*"
cbor = "*"
sodiumoxide = "*"
rand = "*"
routing = "0.2.*"
